--- a/QxqSDKExample/app/build.gradle
+++ b/QxqSDKExample/app/build.gradle
@@ -28,7 +28,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-        compile project(':qxqsdk')
-//    compile 'com.github.qxq.library:qxqsdk:1.0.1'
-//    compile(name:'qxqsdk-1.0.1', ext:'aar')
+    compile 'com.github.qxq.library:qxqsdk:1.0.2'
 }
